--- a/namingops/client/package.json
+++ b/namingops/client/package.json
@@ -31,6 +31,9 @@
     "react-hook-form": "^7.61.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "redux-persist": "^6.0.0",
+    "survey-core": "^2.2.6",
+    "survey-react-ui": "^2.2.6",
     "web-vitals": "^5.0.3",
     "yup": "^1.6.1"
   },
