--- a/namingops/server/package.json
+++ b/namingops/server/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^7.0.1",
     "google-auth-library": "^10.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.18.0",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
