--- a/namingops/client/package.json
+++ b/namingops/client/package.json
@@ -67,6 +67,7 @@
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
+    "http-proxy-middleware": "^3.0.5",
     "react-refresh": "^0.17.0",
     "react-scripts": "^5.0.1"
   },
