--- a/namingops/server/package.json
+++ b/namingops/server/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.0.0",
+    "mongosh": "^2.5.6",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
