--- a/namingops/client/package.json
+++ b/namingops/client/package.json
@@ -35,7 +35,8 @@
     "survey-core": "^2.2.6",
     "survey-react-ui": "^2.2.6",
     "web-vitals": "^5.0.3",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zustand": "^5.0.7"
   },
   "scripts": {
     "start": "craco start",
