--- a/namingops/client/package.json
+++ b/namingops/client/package.json
@@ -20,12 +20,14 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "axios": "^1.11.0",
+    "bootstrap": "^5.3.7",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "formik": "^2.4.6",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.61.1",
