--- a/namingops/client/package.json
+++ b/namingops/client/package.json
@@ -11,10 +11,16 @@
     "@mui/material": "^7.2.0",
     "@mui/x-data-grid": "^8.9.1",
     "@mui/x-date-pickers": "^8.9.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.8.2",
+    "@rjsf/utils": "^5.24.12",
     "@stripe/react-stripe-js": "^3.8.1",
     "@stripe/stripe-js": "^7.7.0",
+    "@tanstack/react-query": "^5.84.1",
+    "@tanstack/react-table": "^8.21.3",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
@@ -24,13 +30,16 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "formik": "^2.4.6",
+    "framer-motion": "^12.23.12",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "radix-ui": "^1.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.61.1",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "redux-persist": "^6.0.0",
@@ -38,6 +47,7 @@
     "survey-react-ui": "^2.2.6",
     "web-vitals": "^5.0.3",
     "yup": "^1.6.1",
+    "zod": "^4.0.14",
     "zustand": "^5.0.7"
   },
   "scripts": {
