fixed api endpoints and updated readme

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "express-session": "^1.18.2"
+    "bootstrap": "^5.3.7",
+    "express-session": "^1.18.2",
+    "react-spring": "^10.0.1"
   }
 }
