--- a/namingops/client/package.json
+++ b/namingops/client/package.json
@@ -3,52 +3,58 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@hookform/resolvers": "^5.2.0",
-    "@mui/icons-material": "^7.2.0",
-    "@mui/lab": "^7.0.0-beta.14",
-    "@mui/material": "^7.2.0",
-    "@mui/x-data-grid": "^8.9.1",
-    "@mui/x-date-pickers": "^8.9.0",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@react-oauth/google": "^0.12.2",
-    "@reduxjs/toolkit": "^2.8.2",
-    "@rjsf/utils": "^5.24.12",
-    "@stripe/react-stripe-js": "^3.8.1",
-    "@stripe/stripe-js": "^7.7.0",
-    "@tanstack/react-query": "^5.84.1",
-    "@tanstack/react-table": "^8.21.3",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.6.4",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "axios": "^1.11.0",
-    "bootstrap": "^5.3.7",
-    "date-fns": "^4.1.0",
-    "dotenv": "^17.2.1",
-    "formik": "^2.4.6",
-    "framer-motion": "^12.23.12",
-    "jspdf": "^3.0.1",
-    "jspdf-autotable": "^5.0.2",
-    "radix-ui": "^1.4.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/lab": "^5.0.0-alpha.153",
+    "@mui/material": "^5.14.18",
+    "@mui/x-data-grid": "^6.18.1",
+    "@mui/x-date-pickers": "^6.18.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@react-oauth/google": "^0.11.1",
+    "@react-spring/animated": "^9.7.3",
+    "@react-spring/core": "^9.7.3",
+    "@react-spring/shared": "^9.7.3",
+    "@react-spring/web": "^9.7.3",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@rjsf/utils": "^5.13.0",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-table": "^8.10.7",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "formik": "^2.4.5",
+    "framer-motion": "^10.16.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
+    "jsx-runtime": "^1.2.0",
+    "radix-ui": "^1.0.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.10",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
-    "react-hook-form": "^7.61.1",
-    "react-hot-toast": "^2.5.2",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.7.1",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.19.0",
+    "react-spring": "^9.7.3",
     "redux-persist": "^6.0.0",
-    "survey-core": "^2.2.6",
-    "survey-react-ui": "^2.2.6",
-    "web-vitals": "^5.0.3",
-    "yup": "^1.6.1",
-    "zod": "^4.0.14",
-    "zustand": "^5.0.7"
+    "survey-core": "^1.9.116",
+    "survey-react-ui": "^1.9.116",
+    "web-vitals": "^3.5.0",
+    "yup": "^1.3.2",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.6"
   },
   "scripts": {
     "start": "craco start",
@@ -76,13 +82,20 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
-    "ajv": "^8.17.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
-    "html-webpack-plugin": "^5.6.3",
-    "http-proxy-middleware": "^3.0.5",
-    "react-refresh": "^0.17.0",
+    "html-webpack-plugin": "^5.5.3",
+    "http-proxy-middleware": "^2.0.6",
+    "process": "^0.11.10",
+    "react-refresh": "^0.14.0",
     "react-scripts": "^5.0.1"
+  },
+  "resolutions": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react/jsx-runtime": "18.2.0",
+    "react/jsx-dev-runtime": "18.2.0"
   },
   "react-dotenv": {
     "whitelist": [
