fixed dependency issue

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@tanstack/react-query": "^5.85.0",
     "bootstrap": "^5.3.7",
     "express-session": "^1.18.2",
     "react-spring": "^10.0.1"
