update script for heroku deployment

--- a/namingops/server/package.json
+++ b/namingops/server/package.json
@@ -8,8 +8,7 @@
     "dev": "nodemon src/index.js",
     "test": "jest",
     "lint": "eslint .",
-    "format": "prettier --write .",
-    "heroku-postbuild": "cd ../client && npm install && npm run build"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.10.0",
