--- a/package.json
+++ b/package.json
@@ -5,5 +5,7 @@
     "express-session": "^1.18.2",
     "react-spring": "^10.0.1"
   },
-  "start": "cd namingops/server && npm start"
+  "scripts": {
+    "start": "cd namingops/server && npm start"
+  }
 }
