--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-spring": "^10.0.1"
   },
   "scripts": {
-    "start": "cd namingops/server && npm start"
+    "start": "cd namingops/server && npm start",
+    "heroku-postbuild": "cd namingops/client && npm install && npm run build"
   }
 }
