--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react-spring": "^10.0.1"
   },
  "scripts": {
-  "start": "cd namingops/server && npm start",
-  "heroku-postbuild": "rm -rf namingops/server/build && cd namingops/client && npm install && npm run build && cd .. && mv namingops/client/build namingops/server/build"
+ "heroku-postbuild": "cd client && npm install && npm run build && cp -r build ../server/",
+  "start": "cd server && npm install && npm start"
 }
 }
