Fix: add missing comma in root package.json scripts

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "express-session": "^1.18.2",
     "react-spring": "^10.0.1"
   },
- "scripts": {
-"heroku-postbuild": "cd client && npm install && npm run build && cp -r build ../",
-"start": "cd server && npm install && npm start"
-}
+  "scripts": {
+    "heroku-postbuild": "cd client && npm install && npm run build && cp -r build ../server/",
+    "start": "cd server && npm install && npm start"
+  }
 }
