--- a/namingops/server/package.json
+++ b/namingops/server/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.10.0",
+    "@google/genai": "^1.14.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
