--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react-spring": "^10.0.1"
   },
   "scripts": {
-    "heroku-postbuild": "cd client && npm install && npm run build && cp -r build ../server/",
-    "start": "cd server && npm install && npm start"
+    "heroku-postbuild": "cd namingops/client && npm install && npm run build && rm -rf namingops/server/build && cp -r namingops/client/build namingops/server/build",
+    "start": "cd namingops/server && npm install && npm start"
   }
 }
