--- a/namingops/client/package.json
+++ b/namingops/client/package.json
@@ -29,6 +29,7 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "@uiw/react-markdown-preview": "^5.1.5",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
@@ -45,8 +46,10 @@
     "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^10.1.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
+    "react-simple-wysiwyg": "^3.4.0",
     "react-spring": "^9.7.3",
     "redux-persist": "^6.0.0",
     "survey-core": "^1.9.116",
