--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@tanstack/react-query": "^5.85.0",
+    "@uiw/react-markdown-preview": "^5.1.5",
+    "@uiw/react-md-editor": "^4.0.8",
     "bootstrap": "^5.3.7",
     "express-session": "^1.18.2",
     "react-spring": "^10.0.1"
