--- a/namingops/server/package.json
+++ b/namingops/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "db:seed": "node approvedNameSeed.js",
     "test": "jest",
     "lint": "eslint .",
     "format": "prettier --write ."
@@ -13,6 +14,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.10.0",
     "@google/genai": "^1.14.0",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
