--- a/namingops/client/package.json
+++ b/namingops/client/package.json
@@ -31,6 +31,7 @@
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@uiw/react-markdown-preview": "^5.1.5",
+    "@uiw/react-md-editor": "^4.0.8",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
