fix heroku postbuild script

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "node": "22.x"
   },
   "scripts": {
-    "heroku-postbuild": "cd namingops/client && npm install && npm run build && rm -rf namingops/server/build && cp -r namingops/client/build namingops/server/build",
+    "heroku-postbuild": "cd namingops/client && npm install && npm run build && rm -rf ../server/build && cp -r build ../server/build",
     "start": "cd namingops/server && npm install && npm start"
   }
 }
