--- a/namingops/client/package.json
+++ b/namingops/client/package.json
@@ -60,6 +60,7 @@
     "survey-core": "^1.9.116",
     "survey-react-ui": "^1.9.116",
     "web-vitals": "^3.5.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.3.2",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
