update welcome tab gemini name generator

--- a/namingops/client/package.json
+++ b/namingops/client/package.json
@@ -42,6 +42,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.1",
     "jsx-runtime": "^1.2.0",
+    "markdown-to-jsx": "^7.7.13",
     "marked": "^16.2.0",
     "process": "^0.11.10",
     "radix-ui": "^1.0.1",
